Fixed css, everything is not cancer anymore

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -3,19 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>EoM CS Club</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<div class="centeredtop">
+<div class="landing centeredtop fadein">
     Earl of March Computer Science Club
 </div>
-<div class="centeredmiddle">
+<div class="landing centeredmiddle fadein">
     Our website is still being built.
 </div>
-<div class="centeredbottom">
+<div class="landing centeredbottom fadein">
     Come back later.
 </div>
-<div class="centeredlast">
+<div class="landing centeredlast fadein">
     <p>Hosted by Andrew Peng, Simon Zeng, and Eddy Yao</p>
 </div>
 </body>
