--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -8,16 +8,14 @@
 	<body>		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>About</h1>
 						Welcome to Earl of March Secondary School's Computer Science Club Online Judge. 
 						</br>
-						This project is made and maintained by Peter Zhu and written using Ruby on Rails.
-						This project is open sourced under the GNU GPL V3 license. 
-						You can find this project in its <a href = "https://github.com/peterzhu2118/onlinejudge">GitHub</a> page.
-						Please submit bug reports to the GitHub page or email me. You can also fork the project and make it better.
+						This website is made and maintained by Andrew Peng, Simon Zeng, and Eddy Yao.<br>
+						This website was cloned from Peter Zhu's original website and is open sourced under the GNU GPL V3 license.<br>
+						You can find the original project in its <a href = "https://github.com/peterzhu2118/onlinejudge">GitHub</a> page.
 						</br>
-						For questions or inquiries about the project please email me at peter@peterzhu.ca.
 						
 					</div>
 				</div>
