--- a/app/views/welcome/faq.html.erb
+++ b/app/views/welcome/faq.html.erb
@@ -14,7 +14,7 @@
 	<body>			
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>Frequently Asked Questions</h1>
 						
 						<div class="panel-group">
