--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,6 +15,13 @@
  */
  
 body {
+	 background: #2980b9 url('background.png') repeat 0 0;
+	-webkit-animation: 10s linear 0s normal none infinite animate;
+	-moz-animation: 10s linear 0s normal none infinite animate;
+	-ms-animation: 10s linear 0s normal none infinite animate;
+	-o-animation: 10s linear 0s normal none infinite animate;
+	animation: 10s linear 0s normal none infinite animate;
+	background: url("background.png");
 				margin:0;
 				padding:0;
 				font-family: Sans-Serif;
@@ -39,13 +46,16 @@ body {
 				width: 100%;
 			}
 			
-			#nav {
+			nav {
+				background: rgba(0, 0, 0, 0.5);
+				border-radius: 25px;
 				padding-bottom: 10010px;
+				margin-top: 15px;
 				margin-bottom: -10000px;
+				text-align: center;
 				float: left;
-				width: 230px;
-				margin-left: -100%;
-				background: #eee;
+				width: 200px;
+				margin-left: -99.4%;
 			}
 			
 			#footer {
@@ -68,10 +78,6 @@ body {
 				margin: 15px; /* Padding for content */
 				margin-top: 0;
 			}
-		
-			p {
-				color: #555;
-			}
 	
 			nav ul {
 				list-style-type: none;
@@ -80,10 +86,128 @@ body {
 			}
 			
 			nav ul a {
-				color: darkgreen;
+				color: white;
 				text-decoration: none;
 			}
+			
+p{
+  font-family: ubuntu;
+  font-size: 1vw;
+  color: white;
+}
+/* link hover effect */
+nav ul a::before,
+::after {
+	text-decoration: none;
+	color: white;
+	display: inline-block;
+	opacity: 0;
+	-webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+	-moz-transition: -moz-transform 0.3s, opacity 0.2s;
+	transition: transform 0.3s, opacity 0.2s;
+}
 
+nav ul a::before {
+	text-decoration: none;
+	margin-right: 10px;
+	color: white;
+	content: '[';
+	-webkit-transform: translateX(20px);
+	-moz-transform: translateX(20px);
+	transform: translateX(20px);
+}
+
+nav ul a::after {
+	text-decoration: none;
+	margin-left: 10px;
+	color: white;
+	content: ']';
+	-webkit-transform: translateX(-20px);
+	-moz-transform: translateX(-20px);
+	transform: translateX(-20px);
+}
+
+nav ul a:hover::before,
+nav ul a:hover::after,
+nav ul a:focus::before,
+nav ul a:focus::after {
+	text-decoration: none;
+	color: white;
+	opacity: 1;
+	-webkit-transform: translateX(0px);
+	-moz-transform: translateX(0px);
+	transform: translateX(0px);
+}
+nav ul a:hover{
+	text-decoration: none;
+	color: white;
+}
+/* default link */
+a{
+	color: orange;
+}
+a:hover{
+	color: #d68a00;
+}
+
+/* fade in key frames */
+
+  @keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Firefox < 16 */
+  @-moz-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Safari, Chrome and Opera > 12.1 */
+  @-webkit-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Internet Explorer */
+  @-ms-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+
+  /* Opera < 12.1 */
+  @-o-keyframes fadein {
+      from { opacity: 0; }
+      to   { opacity: 1; }
+  }
+  @font-face {
+    font-family: ubuntu;
+    src: url(ubuntu.ttf);
+}
+div{
+	font-family: ubuntu;
+	color: white;
+}
+.landing{
+  font-size: 2.5vw;
+  color: white;
+}
+.fadein{
+	-webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 2s; /* Firefox < 16 */
+    -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+    animation: fadein 2s;
+}
+input{
+	color: black;
+}
+.panel-title, .panel-default > .panel-heading, .panel{
+	color: white;
+	background-color: #2d2d2d;
+	border: none;
+	border-radius: 10px;
+}
 .warning {
 border: 1px solid;
 margin: 10px 0px;
@@ -93,6 +217,46 @@ background-position: 10px center;
 color: #9F6000;
 background-color: #FEEFB3;
 }
+.centeredtop{
+  position: fixed;
+  top: 5%;
+  left: 50%;
+  transform: translate(-50%, -5%);
+  -webkit-transform: translate(-50%, -5%);
+  -moz-transform: translate(-50%, -5%);
+  -o-transform: translate(-50%, -5%);
+  -ms-transform: translate(-50%, -5%);
+}
+.centeredmiddle{
+  position: fixed;
+  top: 46%;
+  left: 50%;
+  transform: translate(-50%, -46%);
+  -webkit-transform: translate(-50%, -46%);
+  -moz-transform: translate(-50%, -46%);
+  -o-transform: translate(-50%, -46%);
+  -ms-transform: translate(-50%, -46%);
+}
+.centeredbottom{
+   position: fixed;
+   top: 54%;
+   left: 50%;
+   transform: translate(-50%, -54%);
+   -webkit-transform: translate(-50%, -54%);
+   -moz-transform: translate(-50%, -54%);
+   -o-transform: translate(-50%, -54%);
+   -ms-transform: translate(-50%, -54%);
+ }
+ .centeredlast{
+    position: fixed;
+    top: 98%;
+    left: 50%;
+    transform: translate(-50%, -98%);
+    -webkit-transform: translate(-50%, -98%);
+    -moz-transform: translate(-50%, -98%);
+    -o-transform: translate(-50%, -98%);
+    -ms-transform: translate(-50%, -98%);
+  }
 
 table {
 		    font-family: arial, sans-serif;
@@ -129,4 +293,31 @@ hr {
 
 pre{
 white-space:pre-wrap;
+}
+
+/* animated background */
+ 
+@-webkit-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: 500px 0;}
+}
+ 
+@-moz-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: 500px 0;}
+}
+ 
+@-ms-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: 500px 0;}
+}
+ 
+@-o-keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: 500px 0;}
+}
+ 
+@keyframes animate {
+	from {background-position:0 0;}
+	to {background-position: 500px 0;}
 }
