--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,15 +2,16 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Welcome - CS Club Online Judge</title>	
+		<title>Welcome - CS Club Online Judge</title>
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>		
 	</head>
 	
 	<body>				
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<b><h3>Please read the FAQ if you are using this for the first time.</h3></b>
-						<font color="red">Any unauthorized access, attempts to circumvent the security controls, or abuse of the system will result in DISQUALIFICATION from the contest.</font>
+						<font color="#f95c5c">Any unauthorized access, attempts to circumvent the security controls, or abuse of the system will result in DISQUALIFICATION from the contest.</font>
 						
 						<br>
 						<br>
