--- a/app/views/admin/contest.html.erb
+++ b/app/views/admin/contest.html.erb
@@ -8,7 +8,7 @@
 	<body>		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>Contest</h1>
 						
 						<%= form_for @contest, url: "/admin/contest/view/#{params[:id]}" do |c| %>
