--- a/app/views/admin/new_problem.html.erb
+++ b/app/views/admin/new_problem.html.erb
@@ -9,7 +9,7 @@
 
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>New Problem</h1>
 						
 						<%= form_for @problem, url: "/admin/problem/#{params[:id]}/new" do |p| %>
