--- a/app/views/admin/problem.html.erb
+++ b/app/views/admin/problem.html.erb
@@ -9,7 +9,7 @@
 	
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<%= link_to "Back", "/admin/contest/view/#{@problem.contest_id}/" %>
 					
 						<h1>View Problem</h1>
