--- a/app/views/contests/main.html.erb
+++ b/app/views/contests/main.html.erb
@@ -8,8 +8,9 @@
 	<body>			
 			<main>
 				<div id="content">
-					<div class="innertube">
-						<a href="/panel"> Back to contests page </a>
+					<div class="innertube fadein">
+					<br>
+						<a href="/panel">Back to contests page </a>
 						<br />
 						<h1>Contest <%= @contest.title %></h1>
 						<table>
