--- a/app/views/problems/main.html.erb
+++ b/app/views/problems/main.html.erb
@@ -8,7 +8,8 @@
 	<body>			
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
+					<br>
 						<%= link_to "Back", "/contest/#{params[:contest_id]}/" %>
 						<h1><%= @problem.title %></h1>
 						Runtime: 3 seconds
