--- a/app/views/problems/submit.html.erb
+++ b/app/views/problems/submit.html.erb
@@ -10,7 +10,7 @@
 		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>Submit</h1>
 						<%= form_tag "/problem/#{params[:contest_id]}/#{params[:problem_id]}/submit", :multipart => true do%>
 							Language:
