--- a/app/views/admin/all_submissions.html.erb
+++ b/app/views/admin/all_submissions.html.erb
@@ -8,7 +8,7 @@
 	<body>				
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>All Submissions</h1>
 						<table>
 							<tr>
