--- a/app/views/admin/all_users.html.erb
+++ b/app/views/admin/all_users.html.erb
@@ -8,7 +8,7 @@
 	<body>		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>All Users</h1>
 						<a href="/admin/user/new">New User</a>
 						<table>
