--- a/app/views/admin/new_user.html.erb
+++ b/app/views/admin/new_user.html.erb
@@ -8,7 +8,7 @@
 	<body>			
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>New User</h1>
 						
 						<%= form_for @user, url: "/admin/user/new" do |u| %>
