Update FAQ, other garbage

--- a/app/views/admin/panel.html.erb
+++ b/app/views/admin/panel.html.erb
@@ -11,7 +11,7 @@
 		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						
 					</div>
 				</div>
