--- a/app/views/admin/user.html.erb
+++ b/app/views/admin/user.html.erb
@@ -8,7 +8,7 @@
 	<body>				
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>View User</h1>
 						
 						<%= form_for @user, url: "/admin/user/view/#{params[:id]}" do |u| %>
