--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -13,8 +13,8 @@
 						Welcome to Earl of March Secondary School's Computer Science Club Online Judge. 
 						</br>
 						This website is made and maintained by Andrew Peng, Simon Zeng, and Eddy Yao.<br>
-						This website was cloned from Peter Zhu's original website and is open sourced under the GNU GPL V3 license.<br>
-						You can find the original project in its <a href = "https://github.com/peterzhu2118/onlinejudge">GitHub</a> page.
+						This website was cloned from Peter Zhu's original GitHub repository, and is open sourced under the GNU GPL V3 license.<br>
+						You can find the original project on its <a href = "https://github.com/peterzhu2118/onlinejudge">GitHub</a> page.
 						</br>
 						
 					</div>
