--- a/app/views/welcome/faq.html.erb
+++ b/app/views/welcome/faq.html.erb
@@ -140,7 +140,7 @@
 								</div>
 								<div id="collapse8" class="panel-collapse collapse">
 									<div class="panel-body">
-						The contest will be written on February 7, 2017 3:00PM-6:00PM in room 258 (computer science room). There will be no charge to participate.
+						The contest date is to be determined.
 									</div>
 								</div>
 							</div>
@@ -156,7 +156,7 @@
 								<div id="collapse9" class="panel-collapse collapse">
 									<div class="panel-body">
 						By using the online judge, I agree not to attempt to attack and/or exploit the online judge in any way.
-						If bugs/security holes are found, I will contact the author of the online judge by either submitting a bug report in the <a href="https://github.com/peterzhu2118/onlinejudge">GitHub</a> page or emailing Peter Zhu (peter@peterzhu.ca).
+						If bugs/security holes are found, I will contact the author of the online judge by either submitting a bug report in the <a href="https://github.com/s-zeng/eomcs.club">GitHub</a> page or emailing one of the heads of the club.
 						I also agree that if attacking/hacking is suspected, my account will be terminated and I will be disqualified from the contest.
 									</div>
 								</div>
@@ -172,7 +172,7 @@
 								</div>
 								<div id="collapse10" class="panel-collapse collapse">
 									<div class="panel-body">
-						Do NOT attempt to exploit that bug, but please do submit an issue in the <a href="https://github.com/peterzhu2118/onlinejudge/issues">GitHub</a> page or email Peter Zhu at peter@peterzhu.ca
+						Do NOT attempt to exploit that bug, but please do submit an issue in the <a href="https://github.com/s-zeng/eomcs.club/issues">GitHub</a> page or email one of the heads of the club.
 									</div>
 								</div>
 							</div>
@@ -187,7 +187,7 @@
 								</div>
 								<div id="collapse11" class="panel-collapse collapse">
 									<div class="panel-body">
-						Peter Zhu runs the online judge. He is the president of the computer science club.
+						Andrew Peng, Simon Zeng, and Eddy Yao run the online judge. They are the heads of computer science club.
 									</div>
 								</div>
 							</div>
@@ -202,7 +202,7 @@
 								</div>
 								<div id="collapse12" class="panel-collapse collapse">
 									<div class="panel-body">
-						The project is open sourced under the GNU GPL V3 open source license. You can find the details about this project in the readme on the <a href="https://github.com/peterzhu2118/onlinejudge">GitHub page</a>.
+						The project is open sourced under the GNU GPL V3 open source license. You can find the details about this project in the readme on the <a href="https://github.com/s-zeng/eomcs.club">GitHub page</a>.
 									</div>
 								</div>
 							</div>
