--- a/app/views/admin/submission.html.erb
+++ b/app/views/admin/submission.html.erb
@@ -8,7 +8,7 @@
 	<body>		
 			<main>
 				<div id="content">
-					<div class="innertube">
+					<div class="innertube fadein">
 						<h1>Submission</h1>
 						
 						<b>First Name:</b> <%= @user.first_name %>
