Minor text fixes

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -14,6 +14,7 @@
 						</br>
 						This website is made and maintained by Andrew Peng, Simon Zeng, and Eddy Yao.<br>
 						This website was cloned from Peter Zhu's original GitHub repository, and is open sourced under the GNU GPL V3 license.<br>
+                        You can find the source for this site on our <a href = "https://github.com/s-zeng/eomcs.club">GitHub</a>.<br> 
 						You can find the original project on its <a href = "https://github.com/peterzhu2118/onlinejudge">GitHub</a> page.
 						</br>
 						
