--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,10 +36,10 @@
 							<li>All input and output must be from <b>standard input and standard output.</b> Output must match exactly, do not add additional spaces, new lines, etc. Do not add user prompts.</li>
 							<li>Current versions for languages:</li>
 							<ul style="list-style-type:circle">
-								<li>C++ - GCC (G++) 4.8.4</li>
-								<li>Java - Oracle JDK 1.8.0</li>
-								<li>Python 2 - 2.7.6</li>
-								<li>Python 3 - 3.4.3</li>
+								<li>C++ - GCC (G++) 5.4.0</li>
+								<li>Java - OpenJDK 1.8.0_131</li>
+								<li>Python 2 - 2.7.12</li>
+								<li>Python 3 - 3.6.2</li>
 							</ul>
 							<li>Java must be written in a class called Main and in a file called Main.java and must not be placed in a package. The class definition should be:</li>
 							<pre>public class Main</pre>
