--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -303,7 +303,7 @@ background-color: #FEEFB3;
   top: 65%;
   left: 60%;
   transform: translate(-60%, -65%);
-  -webkit-transform: translate(-60%, -65%);,
+  -webkit-transform: translate(-60%, -65%);
   -moz-transform: translate(-60%, -65%);
   -o-transform: translate(-60%, -65%);
   -ms-transform: translate(-60%, -65%);
