--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -14,10 +14,10 @@
 	    swal("Wait a sec!", "We're still setting up resources, so check back later!", "warning");
 	}
 </script>
-	<a href="#" onclick="return false;"><img class="floating zoom" src="/assets/resourcebutton.png" onclick=wip()></a>
+	<a href="#" onclick="return false;"><img class="floating zoom img-responsive" src="/assets/resourcebutton.png" onclick=wip()></a>
 </div>
 <div class="landing centered-middle-right fadein">
-	<a href="/onlinegrader"><img class="floating zoom" src="/assets/competitivebutton.png"></a>
+	<a href="/onlinegrader"><img class="floating zoom img-responsize" src="/assets/competitivebutton.png"></a>
 </div>
 <div class="landing centeredlast fadein">
     <p>Hosted by Andrew Peng, Simon Zeng, and Eddy Yao</p>
